Edited index.htm via GitHub

--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,7 @@
+<!-- @Description: This is the output web file which displays the current trends and the option of either buy/sell/hold  -->
+<!-- @Author: Shweta Medhekar -->
+<!-- @Created: Aug 2007 -->
+
 <html>
 
 <head>
